kustomize/kubeflow/patches/kfam.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profiles-deployment
  namespace: kubeflow
spec:
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
