kustomize/kubeflow/patches/metadata-external-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata-grpc-deployment
spec:
  template:
    spec:
      containers:
        - name: container
          # Remove existing environment variables
          args: ["--grpc_port=$(METADATA_GRPC_SERVICE_PORT)",
                 "--mysql_config_host=$(DBCONFIG_HOST)",
                 "--mysql_config_database=metadb",
                 "--mysql_config_port=$(DBCONFIG_PORT)",
                 "--mysql_config_user=$(DBCONFIG_USER)",
                 "--mysql_config_password=$(DBCONFIG_PASSWORD)"]
