kustomize/kubeflow/patches/dkube-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: "dkube-proxy"
  namespace: dkube
spec:
  type: ExternalName
  externalName: "istio-ingressgateway.istio-system.svc.cluster.local"
