kustomize/kubeflow/patches/katib-external-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: katib-mysql
  namespace: kubeflow
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: katib-mysql
  namespace: kubeflow
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: katib-db-manager
  namespace: kubeflow
spec:
  template:
    spec:
      containers:
        - name: katib-db-manager
