kustomize/kubeflow/patches/pipeline-external-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: kubeflow
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: kubeflow
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-pipeline
  namespace: kubeflow
spec:
  template:
    spec:
      containers:
        - name: ml-pipeline-api-server
